--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<section class="layers">
 		<div class="layers__container">
 			<div class="layers__item layer-1" style="background-image: url(IMG/fFtPv4UMvPq1IOtrtffv7WR5BZZuaw2L_sm.jpg);"></div>
-			<div class="layers__item layer-2" style="background-image: url(/IMG/XDmRwUsv0tJfdDDaDcoqBczp5OxqUKXr_sm.jpg);"></div>
+			<div class="layers__item layer-2" style="background-image: url(0.jpg);"></div>
 			<div class="layers__item layer-3">
 				<div class="hero-content">
 					<h1 style="font-size: 55px;" id="counter"> пожамкано вишенок : <span >НЕТУ ПОКА</span></h1>
