--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 	<section class="layers">
 		<div class="layers__container">
 			<div class="layers__item layer-1" style="background-image: url(IMG/fFtPv4UMvPq1IOtrtffv7WR5BZZuaw2L_sm.jpg);"></div>
-			<div class="layers__item layer-2" style="background-image: url(0.jpg);"></div>
+			<div class="layers__item layer-2" id="coin" style="background-image: url(0.jpg);"></div>
 			<div class="layers__item layer-3">
 				<div class="hero-content">
 					<h1 style="font-size: 35px;" id="counter"> пожамкано вишенок:<span >НЕТУ ПОКА</span></h1>
 					<!-- <div class="hero-content__p">Creating a beautiful 3D website with a ‘lens effect’</div> -->
-					<button class="button-start"  id="coin">тык!</button>
+					<button class="button-start"  >тык!</button>
           
 				</div>
 			</div>
