--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="rain.js" defer></script>
   <script src="js/script.js" defer></script>
 </head>
-<body>
+<body id="coin">
 
 	<div class="logo" style="background-image: url();"></div>
 
