--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 				<div class="hero-content">
 					<h1 style="font-size: 35px;" id="counter"> пожамкано вишенок:<span >НЕТУ ПОКА</span></h1>
 					<!-- <div class="hero-content__p">Creating a beautiful 3D website with a ‘lens effect’</div> -->
-					<button class="button-start"  >тык!</button>
-          
+					
 				</div>
 			</div>
 			<div class="layers__item layer-4">
@@ -160,7 +159,7 @@ image.addEventListener('click', () => {
   punches++;
 
   // Update the counter element with the new number of punches
-  counter.textContent = punches +" "+ "_*-*_";
+  counter.textContent = "_*-*_" + punches +" "+ "_*-*_";
 });
 
 
